# serai

./: Cargo.toml  deny.toml
.github/workflows/: common-tests.yml  lint.yml  msrv.yml  tests.yml
common/db/: Cargo.toml
common/db/src/: create_db.rs
common/env/: Cargo.toml
common/patchable-async-sleep/: Cargo.toml
common/request/: Cargo.toml
common/std-shims/: Cargo.toml
common/task/: Cargo.toml  README.md
common/task/src/: lib.rs
common/zalloc/: Cargo.toml
coordinator/: Cargo.toml
coordinator/cosign/: Cargo.toml  README.md
coordinator/cosign/src/: delay.rs  evaluator.rs  intend.rs  lib.rs
coordinator/tributary/: Cargo.toml
coordinator/tributary/tendermint/: Cargo.toml
crypto/ciphersuite/: Cargo.toml
crypto/dalek-ff-group/: Cargo.toml
crypto/dkg/: Cargo.toml
crypto/dkg/src/: lib.rs
crypto/dleq/: Cargo.toml
crypto/dleq/src/cross_group/: mod.rs
crypto/ed448/: Cargo.toml
crypto/evrf/circuit-abstraction/: Cargo.toml
crypto/evrf/divisors/: Cargo.toml
crypto/evrf/ec-gadgets/: Cargo.toml
crypto/evrf/embedwards25519/: Cargo.toml
crypto/evrf/generalized-bulletproofs/: Cargo.toml
crypto/evrf/secq256k1/: Cargo.toml
crypto/frost/: Cargo.toml
crypto/multiexp/: Cargo.toml
crypto/schnorr/: Cargo.toml
crypto/schnorrkel/: Cargo.toml
message-queue/: Cargo.toml
message-queue/src/: main.rs
mini/: Cargo.toml
networks/bitcoin/: Cargo.toml
networks/ethereum/alloy-simple-request-transport/: Cargo.toml
networks/ethereum/build-contracts/: Cargo.toml
networks/ethereum/relayer/: Cargo.toml
networks/ethereum/schnorr/: Cargo.toml
networks/ethereum/schnorr/contracts/: Schnorr.sol
networks/ethereum/schnorr/contracts/tests/: Schnorr.sol
networks/ethereum/schnorr/src/: public_key.rs  signature.rs
networks/ethereum/schnorr/src/tests/: mod.rs  premise.rs  public_key.rs  signature.rs
networks/monero/generators/: Cargo.toml
networks/monero/ringct/bulletproofs/: Cargo.toml
networks/monero/ringct/bulletproofs/src/: lib.rs
networks/monero/ringct/clsag/: Cargo.toml
networks/monero/ringct/clsag/src/: lib.rs
networks/monero/ringct/mlsag/: Cargo.toml
networks/monero/ringct/mlsag/src/: lib.rs
networks/monero/rpc/: Cargo.toml
networks/monero/rpc/src/: lib.rs
networks/monero/verify-chain/: Cargo.toml
networks/monero/wallet/: Cargo.toml
networks/monero/wallet/address/: Cargo.toml
networks/monero/wallet/address/src/: lib.rs
networks/monero/wallet/polyseed/: Cargo.toml
networks/monero/wallet/polyseed/src/: lib.rs
networks/monero/wallet/seed/: Cargo.toml
networks/monero/wallet/seed/src/: lib.rs
networks/monero/wallet/src/: lib.rs  scan.rs
networks/monero/wallet/src/send/: mod.rs
networks/monero/wallet/util/: Cargo.toml
networks/monero/wallet/util/src/: seed.rs
orchestration/: Cargo.toml
patches/directories-next/: Cargo.toml
patches/option-ext/: Cargo.toml
patches/parking_lot/: Cargo.toml
patches/parking_lot_core/: Cargo.toml
patches/rocksdb/: Cargo.toml
patches/zstd/: Cargo.toml
processor/bitcoin/: Cargo.toml
processor/ethereum/: Cargo.toml
processor/ethereum/deployer/: Cargo.toml
processor/ethereum/deployer/contracts/: Deployer.sol
processor/ethereum/deployer/src/: lib.rs
processor/ethereum/erc20/: Cargo.toml
processor/ethereum/erc20/src/: lib.rs
processor/ethereum/primitives/: Cargo.toml
processor/ethereum/primitives/src/: lib.rs
processor/ethereum/router/: Cargo.toml  README.md  build.rs
processor/ethereum/router/contracts/: IRouter.sol  Router.sol
processor/ethereum/router/src/: lib.rs
processor/ethereum/router/src/tests/: mod.rs
processor/ethereum/src/: main.rs  publisher.rs  rpc.rs  scheduler.rs
processor/ethereum/src/primitives/: machine.rs  mod.rs  transaction.rs
processor/ethereum/test-primitives/: Cargo.toml
processor/ethereum/test-primitives/src/: lib.rs
processor/frost-attempt-manager/: Cargo.toml
processor/key-gen/: Cargo.toml
processor/messages/: Cargo.toml
processor/monero/: Cargo.toml
processor/primitives/: Cargo.toml
processor/primitives/src/: lib.rs
processor/scanner/: Cargo.toml
processor/scheduler/primitives/: Cargo.toml
processor/scheduler/smart-contract/: Cargo.toml
processor/scheduler/utxo/primitives/: Cargo.toml
processor/scheduler/utxo/standard/: Cargo.toml
processor/scheduler/utxo/transaction-chaining/: Cargo.toml
processor/signers/: Cargo.toml
processor/view-keys/: Cargo.toml
substrate/abi/: Cargo.toml
substrate/client/: Cargo.toml
substrate/client/src/serai/: mod.rs
substrate/coins/pallet/: Cargo.toml
substrate/coins/primitives/: Cargo.toml
substrate/dex/pallet/: Cargo.toml
substrate/economic-security/pallet/: Cargo.toml
substrate/emissions/pallet/: Cargo.toml
substrate/emissions/primitives/: Cargo.toml
substrate/genesis-liquidity/pallet/: Cargo.toml
substrate/genesis-liquidity/primitives/: Cargo.toml
substrate/in-instructions/pallet/: Cargo.toml
substrate/in-instructions/primitives/: Cargo.toml
substrate/node/: Cargo.toml
substrate/primitives/: Cargo.toml
substrate/runtime/: Cargo.toml
substrate/signals/pallet/: Cargo.toml
substrate/signals/primitives/: Cargo.toml
substrate/validator-sets/pallet/: Cargo.toml
substrate/validator-sets/primitives/: Cargo.toml
