[package]
name = "serai-ethereum-test-primitives"
version = "0.1.0"
description = "Test primitives for Ethereum"
license = "AGPL-3.0-only"
repository = "https://github.com/serai-dex/serai/tree/develop/processor/ethereum/test-primitives"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
publish = false
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
k256 = { version = "0.13", default-features = false, features = ["std"] }

alloy-core = { version = "0.8", default-features = false }
alloy-consensus = { version = "0.7", default-features = false, features = ["std"] }

alloy-rpc-types-eth = { version = "0.7", default-features = false }
alloy-simple-request-transport = { path = "../../../networks/ethereum/alloy-simple-request-transport", default-features = false }
alloy-provider = { version = "0.7", default-features = false }

ethereum-primitives = { package = "serai-processor-ethereum-primitives", path = "../primitives", default-features = false }
